--- a/security.html
+++ b/security.html
@@ -211,11 +211,11 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
+<h5><a href='https://jobs.jobvite.com/guidewire-software/job/olGwafwr'>Guidewire Software, Inc. Careers - Cloud Security Engineer - San Mateo,Ca/Remote</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=onOCafwH&__jvst=Tenable+Employee&__jvsd=sWudthwS&__jvsc=Twitter&bid=nX0xSKwB'>Tenable Careers - Security Sales Engineer - Federal</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -235,7 +235,7 @@ senior Network and Security engineer to deliver network and security services to
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/curriculumassociates/job/ozzCafwE'>Curriculum Associates Careers - Infrastructure Security Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -260,7 +260,7 @@ senior Network and Security engineer to deliver network and security services to
 <p>14. Juli 2019 ... TwinCap GmbH has a job opening for Cyber Security Engineer in Z?rich (
 published: 15.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ooda-health/f9e44f91-09c4-4054-b7de-9e80d4054f96/apply'>OODA Health - Security Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/ooda-health/f9e44f91-09c4-4054-b7de-9e80d4054f96/apply'>OODA Health - Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Security Analyst. Greater Salt Lake City Area. Information Technology ? 
 Information Technology. Full-time. Submit your application. LinkedIn profile. 
@@ -287,7 +287,7 @@ Tue 23rd July (reissue) at EMW, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 16, 2019 ... Apply online for the job of Security Engineer at Viva Wallet.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
+<h5><a href='http://klook.applytojob.com/apply/2OaByd96fT/Security-Analyst-SG'>Security Analyst (SG) - Klook - Career Page</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -351,7 +351,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999692146313-network-security-engineer'>GBM Network Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999692146313-network-security-engineer'>GBM Network Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -359,7 +359,7 @@ Wilmington, Delaware. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/sundial/job/5d3jds6rn5a3dp6y17g365zs4h'>State of WI - DHS - Security Patch/Software Engineer 2 (16117) | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -373,7 +373,7 @@ today!</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/jfrstaffing/job/chmnnst95e4a6iyj5wjhtedn3o'>Application Security Engineer | JFR Staffing</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -439,7 +439,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mattermost/637356d4-b72a-4fc4-b4c7-4ea76784dd2a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/637356d4-b72a-4fc4-b4c7-4ea76784dd2a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -447,7 +447,7 @@ Product Security Engineer-Mobile | US - Sunnyvale, More... Paranoids Senior?...<
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/94410120-ffae-4e18-9f6b-32dbcb22bc5a'>Mattermost - Product Security Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
