--- a/software.html
+++ b/software.html
@@ -51,7 +51,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -95,11 +95,11 @@
 <p><span class="badge badge-light">Abstatt, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692223712-professional-internship-security-software-engineer-m-f-'>Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
+<h5><a href='https://quad.referrals.selectminds.com/jobs/software-engineer-12695'>Software Engineer - Be Quad</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -115,7 +115,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
+<h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -201,7 +201,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/genesys/job/hunbxp8tjimt5mqqwxoik18hra'>Senior Software Engineer | GENESYS Consulting Services, Inc.</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/genesys/job/hunbxp8tjimt5mqqwxoik18hra'>Senior Software Engineer | GENESYS Consulting Services, Inc.</a></h5> 
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://towerswatson.referrals.selectminds.com/jobs/senior-software-developer-in-test-insurance-consulting-and-technology-9790'>Senior Software Developer in Test- Insurance Consulting and Technology - Willis Towers Watson Careers</a></h5> 
+<h5><a href='https://towerswatson.referrals.selectminds.com/jobs/senior-software-developer-in-test-insurance-consulting-and-technology-9790'>Senior Software Developer in Test- Insurance Consulting and Technology - Willis Towers Watson Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -273,7 +273,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oERR9fwf&__jvst=Employee+Referral&__jvsd=sEKAqgw9&__jvsc=Twitter&bid=nBlXUKw2'>Jobvite, Inc. Careers - Senior Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oERR9fwf&__jvst=Employee+Referral&__jvsd=sEKAqgw9&__jvsc=Twitter&bid=nBlXUKw2'>Jobvite, Inc. Careers - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -284,6 +284,41 @@
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oQv29fwg&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nqiXUKwO'>Apttus Careers - Senior Software Engineer, QA</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-26</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/862AEDB8B6'>Crossbeam - Jobs: Senior Software Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 19, 2019 ... Apply online for the job of Senior Software Engineer at Crossbeam.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Software Engineer Machine Learning (m/f/d) at 
+riskmethods.</p>
+<hr/>
+<h5><a href='https://aire.workable.com/j/7F962DF40C'>Application Software Engineer - Apply online - Aire - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Apply online for the job of Application Software Engineer at Aire.</p>
+<hr/>
+<h5><a href='https://mercari.workable.com/jobs/1004862'>Software Engineer, Architect [Merpay]</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 ?? ... Apply online for the job of Software Engineer, Architect [Merpay] at Mercari, inc.</p>
+<hr/>
+<h5><a href='https://rovco.workable.com/j/1B45DF8FEC?viewed=true'>Rovco - Jobs: C++ Software Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of C++ Software Engineer at Rovco.</p>
+<hr/>
+<h5><a href='https://smartnews.workable.com/j/58BE190F73?viewed=true'>SmartNews, Inc. - Jobs: Staff Software Engineer, AI Infrastructure ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Apply online for the job of Staff Software Engineer, AI Infrastructure at SmartNews
+, Inc.</p>
+<hr/>
+<h5><a href='https://smartnews.workable.com/j/E5D96658C7?viewed=true'>SmartNews, Inc. - Jobs: Staff Software Engineer, System Generalist ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 19, 2019 ... Apply online for the job of Staff Software Engineer, System Generalist (Content 
+Platform) at SmartNews, Inc.</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deposit-solutions.workable.com/j/A54C07E8B7?viewed=true'>Java Software Engineer - Apply ... - Deposit Solutions GmbH - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 18, 2019 ... Apply online for the job of Java Software Engineer at Deposit Solutions GmbH.</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=o2yV9fwo&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nm7WUKwy'>WP Engine Careers - Senior Staff Software Engineer</a></h5> 
 <p><span class="badge badge-light">Austin,</span></p>
@@ -305,7 +340,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -329,7 +364,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/0823A8EF52'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<h5><a href='https://lynk-2.workable.com/j/0823A8EF52'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -353,7 +388,7 @@
 <p><span class="badge badge-light">Shenzhen, Guangdong, China</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -404,52 +439,13 @@ empowers and?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692127148-software-engineer-cloud-aws-node-js-'>K4Connect Software Engineer - Cloud (AWS, Node.js) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692127148-software-engineer-cloud-aws-node-js-'>K4Connect Software Engineer - Cloud (AWS, Node.js) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692185624-software-engineer-enterprise-iot-management-system'>K4Connect Software Engineer - Enterprise IoT Management System | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://brz.softgarden.io/job/2610384/Senior-Software-Engineer-agiler-Software-Architekt-m-w-d-?jobDbPVId=12134789&amp;l=de'>Senior Software Engineer / agiler Software Architekt (m/w/d)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://bizongo.recruiterbox.com/jobs/fk0jsuj/'>
-    Senior Software Engineer - Frontend at Bizongo
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/software-engineer-i-25185'>Software Engineer I - ELSEVIER Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 18, 2019 ... The Software Engineer I entry-level position performs basic software 
-development assignments within a specific software functional area or product 
-line.</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/software-engineer-iii-25189'>Software Engineer III - ELSEVIER Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... The Senior Software Engineer position performs complex research, design, and 
-software development assignments within a software functional area or product?...</p>
-<hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-software-engineer-11665'>Senior Software Engineer - Akamai Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... We are seeking a passionate, product-focused Senior Software Engineer who 
-thrives on delivering exceptional quality and functionality to customers....</p>
-<hr/>
-<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/senior-python-software-engineer-11659'>Senior Python Software Engineer - Akamai Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... OverviewThe team is a collection of results oriented developers working on tools 
-impacting the entire company. Our main focus is creating frameworks.....</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oX2rafwk&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ncaCUKw7'>Benefitfocus Careers - Manager, Software Engineering (Relocation Opportunity)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-25</p>
 <hr/>
 
 
