--- a/frontend.html
+++ b/frontend.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careersatnutmeg.workable.com/j/55CE9E0DDD'>Nutmeg - Jobs: Senior Front-End Developer - Apply online</a></h5> 
+<h5><a href='https://careersatnutmeg.workable.com/j/55CE9E0DDD'>Nutmeg - Jobs: Senior Front-End Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351802-front-end-developer'>Lecle Vietnam Front-end Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351802-front-end-developer'>Lecle Vietnam Front-end Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -251,7 +251,7 @@ the?...</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/WJCompany/743999692248954-front-end-develeoper-bilingual-korea-english-'>Woongjin, Inc Front End Develeoper - Bilingual(Korea/English) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -267,7 +267,7 @@ the?...</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692240785-frontend-developer'>DataProphet Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataProphet/743999692240785-frontend-developer'>DataProphet Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -275,7 +275,7 @@ the?...</p>
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692242405-developpeur-ti-front-end-'>Ubisoft D?veloppeur TI (Front-end) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692242405-developpeur-ti-front-end-'>Ubisoft D?veloppeur TI (Front-end) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -299,7 +299,7 @@ the?...</p>
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1790265'>Job Application for Senior Software Developer, Front-End (Golf) at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1790265'>Job Application for Senior Software Developer, Front-End (Golf) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -379,11 +379,11 @@ the?...</p>
 <p><span class="badge badge-light">Mesa, Arizona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://career.join.com/jobs/257438-front-end-developer-m-f-x'>Job @ BEAT81 (Berlin): Front-End Developer (m/f/x)  | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://career.join.com/jobs/257438-front-end-developer-m-f-x'>Job @ BEAT81 (Berlin): Front-End Developer (m/f/x)  | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/251604-senior-frontend-engineer'>Job @ Oetker Digital (Berlin): (Senior) Frontend E... | JOIN</a></h5> 
+<h5><a href='https://oetkerdigital.join.com/jobs/251604-senior-frontend-engineer'>Job @ Oetker Digital (Berlin): (Senior) Frontend E... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -414,7 +414,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
+<h5><a href='https://cbs.avature.net/cbsinteractivecareers/JobDetail/Frontend-Web-Developer-Roku/14869'>Frontend Web Developer - Roku - CBS Interactive Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Frontend Web Developer - Roku at created 10-Jul-2019.</p>
 <hr/>
@@ -446,11 +446,11 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://moduscreate.applytojob.com/apply/yWn6rktAg5/Junior-Frontend-Engineer-ReactJS'>Junior Front-end Engineer (ReactJS) - Modus Create, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/yWn6rktAg5/Junior-Frontend-Engineer-ReactJS'>Junior Front-end Engineer (ReactJS) - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Segic/743999692130762-developpeur-front-end-stage-'>Segic D?veloppeur front end (stage) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Segic/743999692130762-developpeur-front-end-stage-'>Segic D?veloppeur front end (stage) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
